--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -40,14 +40,14 @@
         </div>
         
         <!-- Login Form -->
-        <form id="loginForm" onsubmit="handleLogin(event)">
+        <form id="loginForm" method="POST" action="/api/auth/login" onsubmit="handleLogin(event)">
             <div class="form-group">
                 <label for="loginEmail">Email or Username</label>
-                <input type="text" id="loginEmail" name="username" required>
+                <input type="text" id="loginEmail" name="username" autocomplete="username" required>
             </div>
             <div class="form-group">
                 <label for="loginPassword">Password</label>
-                <input type="password" id="loginPassword" name="password" required>
+                <input type="password" id="loginPassword" name="password" autocomplete="current-password" required>
             </div>
             <button type="submit" class="btn-primary">Sign In</button>
             <button type="button" class="btn-secondary" onclick="window.location.href='/'">Cancel</button>
