--- a/src/main/resources/static/help.html
+++ b/src/main/resources/static/help.html
@@ -45,7 +45,7 @@
     <h3>Play Mode</h3>
     <p>Interactive word game where you have to guess the hidden word.</p>
     <ul>
-        <li>Select the word length: 4, 5, 6 or 7 letters</li>
+        <li>Select the word length: 4, 5 or 6 letters</li>
         <li>6 attempts to guess the word</li>
         <li>Color-coded feedback after each guess</li>
         <li>Real-time dictionary validation</li>
@@ -65,7 +65,7 @@
     <p>Comprehensive analysis of bot performance across the entire dictionary of letters.</p>
     <ul>
         <li>Run simulated games covering the full dictionary</li>
-        <li>Compare the performance of different strategies with dictionaries of 4, 5, 6 or 7 letter words</li>
+        <li>Compare the performance of different strategies with dictionaries of 4, 5 or 6 letter words</li>
         <li>View win rates, average guesses, and failure rates</li>
         <li>Analyze performance patterns</li>
         <li>Export results to CSV</li>
@@ -74,7 +74,7 @@
     <h3>Dictionary Mode</h3>
     <p>Explore and analyze word dictionaries.</p>
     <ul>
-        <li>View all valid words for different lengths (4-7 letters)</li>
+        <li>View all valid words for different lengths (4-6 letters)</li>
         <li>Sort by word, frequency, or column statistics</li>
         <li>Search and filter words</li>
         <li>Export dictionary data to CSV</li>
