--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="theme-color" content="#0f172a">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
@@ -11,7 +12,7 @@
     <meta http-equiv="Expires" content="0">
     <title>WordAI Game - Web Interface</title>
     <link rel="icon" href="data:,">
-    <link rel="stylesheet" href="css/style.css?v=20260221_1">
+    <link rel="stylesheet" href="css/style.css?v=20260221_4">
 </head>
 <body>
     <div class="header-bar">
@@ -25,10 +26,10 @@
                 <h1 class="header-title">WordAI</h1>
                 <nav class="app-nav" id="appNav" aria-label="Application Modes">
                     <a class="nav-link" href="#/play" data-nav="play">Play</a>
-                    <a class="nav-link" href="#/bot-demo" data-nav="bot-demo">Auto</a>
-                    <a class="nav-link" href="#/bot-performance" data-nav="bot-performance">Analyse</a>
+                    <a class="nav-link desktop-only" href="#/bot-demo" data-nav="bot-demo">Auto</a>
+                    <a class="nav-link desktop-only" href="#/bot-performance" data-nav="bot-performance">Analyse</a>
                     <a class="nav-link" href="#/dictionary" data-nav="dictionary">Dictionary</a>
-                    <a class="nav-link" href="#/admin" data-nav="admin">Admin</a>
+                    <a class="nav-link desktop-only" href="#/admin" data-nav="admin">Admin</a>
                     <a class="nav-link" href="#/help" data-nav="help">Help</a>
                 </nav>
             </div>
@@ -606,7 +607,7 @@
     <footer class="app-footer">
         <div class="footer-content">
             <div class="footer-copyright">
-                © 2026 FistralTech Ltd | v1.7.0
+                © 2026 FistralTech Ltd | v1.8.0
             </div>
             <nav class="footer-links" aria-label="Footer navigation">
                 <a href="https://fistraltech.com" target="_blank" rel="noopener noreferrer" class="footer-link">fistraltech.com</a>
@@ -618,6 +619,6 @@
         </div>
     </footer>
 
-    <script src="js/game.js?v=20260215_2000"></script>
+    <script src="js/game.js?v=20260221_3"></script>
 </body>
 </html>
